2006-05-24  Derek Price  <derek@ximbiot.com>

	* gpg.c (gpg_keyid2longstring): New function.
	* gpg.h (gpg_keyid2string): New macro.
	(gpg_keyid2longstring): New macro/function.
	* log.c (log_version): Avoid long long, using new macros/functions.
	* rcs.c (RCS_delete_openpgp_signatures): Likewise.

2006-05-23  Mark D. Baushke  <mdb@gnu.org>

	* filesubr.c: Reformat according to HACKING standards.

2006-05-22  Derek Price  <derek@ximbiot.com>

	* rcs.c (RCS_reparsercsfile, RCS_fully_parse, RCS_checkout, RCS_deltas,
	RCS_getdeltatext, RCS_copydeltas): Verify input revision numbers.
	(rcs6): Update to compensate.

	* sanity.sh (rcs6): New test.

2006-05-22  Derek Price  <derek@ximbiot.com>

	* rcscmds.c (RCS_output_diff_options): Always output the file name on a
	diff line, even with two -r options, so that the file path is available
	in a multiple file diff, even without -c or -u.
	* sanity.sh: Update to compensate.

2006-05-22  Lawrence Jones  <lawrence.jones@ugs.com>

	* subr.c (is_admin): Older systems do not necessarily set errno
	sensibly in getgrnam, so do not check.

2006-05-22  Mark D. Baushke  <mdb@gnu.org>

	* commit.c (commit_fileproc): Protect UseNewInfoFmtStrings with
	SUPPORT_OLD_INFO_FMT_STRINGS conditional.

2006-05-20  Derek Price  <derek@ximbiot.com>

	* patch.c (rdiff_usage): Remove obsolete -V argument.
	(main): Remove -V processing.

	* patch.c (rdiff_usage): Use {} around required argument.
	* tag.c (rtag_usage): tag/date is not actually a required argument.

2006-05-20  Mark D. Baushke  <mdb@gnu.org>

	* subr.h (is_admin): is_admin() is used in expressions, so default
	to 'true' rather than 'true;' for the
	!defined(HAVE_CVS_ADMIN_GROUP) case.

2006-05-20  Lawrence Jones  <lawrence.jones@ugs.com>

	* tag.c (rtag_usage): Required alternatives should use {}, not ().

2006-05-19  Derek Price  <derek@ximbiot.com>

	* tag.c (tag_usage, rtag_usage): Clarify & correct usage.

2006-05-17  Mark D. Baushke  <mdb@gnu.org>
